# pybing

./: .gitignore  CMakeLists.txt  mingw_build.bat  setup.py  test_pybing.py  unix_build.sh
Src/: CmFile.cpp  CmTimer.h  DataSetVOC.cpp  Makefile  Objectness.cpp  kyheader.h  main.cpp  pybing.cpp
pybing/: __init__.py  _pybing.py  pybing_helpers.py
src/: CMakeLists.txt  DataSetVOC.cpp  Objectness.cpp  Objectness.h  ValStructVec.h  kyheader.h  main.cpp  pybing.cpp  pybing.h  pybing_helpers.h
